# exampe-rust-server-on-lambda

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
pulumi/: Pulumi.yaml  index.ts  package-lock.json  package.json
src/: main.rs
