[package]
name = "exampe-rust-server-on-lambda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
serde = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
